--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=anime-producer
 spring.kafka.bootstrap-servers=localhost:9092
+#spring.kafka.bootstrap-servers=kafka:29092
 spring.kafka.consumer.group-id=anime-group
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
